<resources>
    <string name="app_name">Xpress App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="regText">Let\'s Register</string>
    <string name="regDesc">Already have an account? Login.</string>
    <string name="fname">First name</string>
    <string name="lname">Username</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="register">Register</string>
    <string name="loginText">Let\'s Login</string>
    <string name="login">Don\'t have an account? Register.</string>
    <string name="forgotPass">Forgot Password?</string>
    <string name="txtLogin">Login</string>
    <string name="emailPrompt">Enter your email :</string>
    <string name="passPrompt">Enter New Password :</string>
    <string name="changePass">Change Password</string>
    <string name="update">Change Your Password</string>
    <string name="asEmployee">Employee</string>
    <string name="loginAs">Login as:</string>
    <string name="asAdmin">Admin</string>
    <string name="asCustomer">Customer</string>
    <string name="schedule">Schedule</string>
    <string name="Bookings">Bookings</string>
    <string name="pay">Checkout</string>

    <string name="accessories">Accessories</string>
    <string name="services">Services</string>
    <string name="batteries">Batteries</string>
    <string name="brakes">Brakes</string>
    <string name="suspension">Suspension</string>
    <string name="wipers">Wipers</string>
    <string name="oil">Oil Services</string>
    <string name="tyres">Tyres</string>
    <string name="price">5000</string>
    <string name="scotch_premium">Scotch Premium</string>
    <string name="battery">Battery</string>
    <string name="brand">Brand Name</string>
    <string name="description">Description</string>
    <string name="item">Product Name</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="admin">Admin Dashboard</string>
    <string name="tyresS"><![CDATA[Tyres & Tyres Services]]></string>
    <string name="others"><![CDATA[Products & Services]]></string>
    <string name="appointment">Book Appointment</string>
    <string name="service">Service</string>
    <string name="branch">Branch</string>
    <string name="firstName">First Name</string>
    <string name="phone">Phone</string>
    <string name="carMake">Car Make</string>
    <string name="carReg">Car Reg</string>
    <string name="carModel">Car Model</string>
    <string name="book">Book Appointment</string>
    <string name="brakesApp">Brakes Appointment</string>
    <string name="oilApp">Oil Service Appointment</string>
    <string name="othersApp">Products Appointment</string>
    <string name="suspensionApp">Suspension Appointment</string>
    <string name="tyresApp">Tyres Appointment</string>
    <string name="batteryApp">Battery Appointment</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="text">text</string>
    <string name="App">All Appointments</string>
    <string name="items">Items Used</string>
    <string name="checkout">Check Out</string>
    <string name="total_amount">Total Amount</string>
    <string name="amount">Ksh 5000</string>
    <string name="completedB">Completed Bookings</string>
    <string name="customerB">All Bookings</string>
    <string name="regiterE">Employee Registration</string>
    <string name="reports">Reports</string>
    <string name="taskA">Task Assignment</string>
    <string name="EmployeeReg">Employee Registration</string>
    <string name="task">Task Assignment</string>
    <string name="name">Assigned Employee</string>
    <string name="assgT">Assign Task</string>
    <string name="assignedT">Assigned Tasks</string>
    <string name="save">Save Task</string>
    <string name="completedT">Completed Task</string>
    <string name="invoice">Invoice</string>
    <string name="servedBy">Served By</string>
    <string name="saveI">Save Invoice</string>
    <string name="employee">Employee Dashboard</string>
    <string name="reportsD">Reports Dashboard</string>
    <string name="_1">1</string>
    <string name="total_employee">No. of Employees</string>
    <string name="total_revenue">Total Revenue</string>
    <string name="completedTB">Total Bookings</string>
    <string name="registereduser">Registered Users</string>
    <string name="payment">Check out</string>
    <string name="phoneNo">Enter your Phnone No.</string>
    <string name="confirmPayment">Confirm you entered the correct contact. Click Checkout if you\'re paying with Mpesa.</string>
    <string name="cash">Paid by Cash.</string>
    <string name="payO">Pay with Mpesa</string>
    <string name="filter">Filter</string>
    <string name="eName">Employee name</string>

    <string-array name="tyreServices">
        <item>Tyre Fitment - Passenger</item>
        <item>Tyre Fitment - SUV</item>
        <item>Tyre Fitment and Balancing</item>
        <item>Tyre Fitment  and Alignment</item>
        <item>Balancing only</item>
        <item>Wheel Alignment - Passenger</item>
        <item>Wheel Alignment - SUV</item>
        <item>Tyre Rotation</item>
        <item>Puncture Repair</item>
    </string-array>

    <string-array name="oilServices">
        <item>Oil service - Minor</item>
        <item>Oil service - Major</item>
        <item>Spark plugs</item>
    </string-array>

    <string-array name="brakeServices">
        <item>Brake pads</item>
        <item>Brake disks</item>
    </string-array>

    <string-array name="suspensionServices">
        <item>Shock Absorbers and Alignment</item>
        <item>Coil Springs and Alignment</item>
    </string-array>

    <string-array name="batteryServices">
        <item>Battery Replacement</item>
        <item>Battery Check</item>
    </string-array>

    <string-array name="productServices">
        <item>3D-point inspection</item>
        <item>Electronic diagnosis</item>
        <item>Spark plugs</item>
        <item>Light Bulbs</item>
        <item>Wipers</item>
    </string-array>

    <string-array name="allServices">
        <item>Tyre Fitment - Passenger</item>
        <item>Tyre Fitment - SUV</item>
        <item>Tyre Fitment and Balancing</item>
        <item>Tyre Fitment  and Alignment</item>
        <item>Balancing only</item>
        <item>Wheel Alignment - Passenger</item>
        <item>Wheel Alignment - SUV</item>
        <item>Tyre Rotation</item>
        <item>Puncture Repair</item>
        <item>Oil service - Minor</item>
        <item>Oil service - Major</item>
        <item>Spark plugs</item>
        <item>Brake pads</item>
        <item>Brake disks</item>
        <item>Shock Absorbers and Alignment</item>
        <item>Coil Springs and Alignment</item>
        <item>Battery Replacement</item>
        <item>Battery Check</item>
        <item>3D-point inspection</item>
        <item>Electronic diagnosis</item>
        <item>Spark plugs</item>
        <item>Light Bulbs</item>
        <item>Wipers</item>
    </string-array>

    <string-array name="branches">
        <item>Nyeri Branch</item>
        <item>Nairobi Branch</item>
        <item>Kisumu Branch</item>
        <item>Thika Branch</item>
        <item>Eldoret Branch</item>
    </string-array>

    <string-array name="time">
        <item>08.00 – 8.30am</item>
        <item>08.30 – 9.00am</item>
        <item>09.30 – 10.00am</item>
        <item>10.30 – 11.00am</item>
        <item>11.30 – 12.00pm</item>
        <item>12.30 – 13.00pm</item>
        <item>13.30 – 14.00pm</item>
        <item>14.30 – 15.00pm</item>
    </string-array>

</resources>