<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blury_background"
    tools:context=".auth.fragments.LoginFragment">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottomLogo"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineMrgTop"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginText"
        style="@style/h4"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottomLogo"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottomLogin"/>

    <TextView
        android:id="@+id/loginToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        style="@style/h3"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottomLogin"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottomReg"/>

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginAs"
        style="@style/h3"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottomReg"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottomCheckBox"/>

    <CheckBox
        android:id="@+id/asAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asAdmin"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/asCustomer"
        app:layout_constraintStart_toEndOf="@+id/textLogin"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottomReg"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottomCheckBox"/>

    <CheckBox
        android:id="@+id/asCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asCustomer"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/asEmployee"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottomReg"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottomCheckBox"/>

    <CheckBox
        android:id="@+id/asEmployee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asEmployee"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottomReg"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottomCheckBox"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottomEmail"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottomCheckBox"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottomPass"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottomEmail"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPass"
        style="@style/h3"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottomPass"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottomForgotPass"/>

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="@drawable/blue_background"
        android:text="@string/txtLogin"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/guidelineMrgBottom"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottomForgotPass"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.34" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>