<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blury_background"
    tools:context=".employee.fragments.UpdatePasswordFragment">

    <TextView
        style="@style/h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/guidelineMrgTop"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottomLogo"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineMrgTop"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/emailForgot"
        style="@style/h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailPrompt"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottomLogo" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottomEmail"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/passForgot"
        style="@style/h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passPrompt"
        app:layout_constraintBottom_toTopOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottomEmail" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:hint="@string/pass"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottomPass"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintTop_toBottomOf="@id/guideline1"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/updatePass"
        android:layout_width="295dp"
        android:layout_height="55dp"
        android:background="@drawable/blue_background"
        android:text="@string/changePass"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/guidelineMrgBottom"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottomPass"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.69" />
</androidx.constraintlayout.widget.ConstraintLayout>