<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/InvoiceFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customer.fragments.InvoiceFragment">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/g_blue"
        android:title="@string/items"
        android:titleMarginStart="45dp"
        android:titleTextAppearance="@style/h4"
        android:titleTextColor="@color/g_white"
        app:layout_constraintBottom_toBottomOf="@id/guidelineMrgTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/invoiceRV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline6"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineMrgTop" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/guidelineTopTotal"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toBottomOf="@id/guideline6">

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:labelFor="@+id/phoneNumber"
            android:text="@string/name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/phoneNo"
            android:label="@string/phoneNo"
            android:textColor="@color/black"
            android:textColorHighlight="#32addf"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_amount"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/guidelineMrgBottom"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineTopTotal" />

    <TextView
        android:id="@+id/totalAmount"
        style="@style/h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/guidelineMrgBottom"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintTop_toBottomOf="@id/guidelineTopTotal" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/checkOut"
        style="@style/blueButtonStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/checkout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineMrgBottom"
        app:spinning_bar_color="@color/g_white"
        tools:ignore="VisualLintButtonSize" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.86" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTopTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68" />

</androidx.constraintlayout.widget.ConstraintLayout>