<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payments.MpesaPaymentActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/g_blue"
        android:title="@string/payment"
        android:titleMarginStart="95dp"
        android:titleTextAppearance="@style/h4"
        android:titleTextColor="@color/g_white"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottomToolBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTopBusinessCode"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineMrgStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottomToolBar" />

    <TextView
        android:id="@+id/paymentConfirmation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_thin"
        android:text="@string/confirmPayment"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/guideline7"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineTopBusinessCode" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btnPayCash"
        style="@style/blueButtonStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/cash"
        app:layout_constraintBottom_toTopOf="@id/guidelineMrgTopPay"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toBottomOf="@id/guideline7"
        app:spinning_bar_color="@color/g_white"
        tools:ignore="VisualLintButtonSize" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btnPay"
        style="@style/blueButtonStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/payO"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottomPay"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineMrgTopPay"
        app:spinning_bar_color="@color/g_white"
        tools:ignore="VisualLintButtonSize" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomToolBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTopBusinessCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgTopPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.69" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56" />

</androidx.constraintlayout.widget.ConstraintLayout>